--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -44,9 +44,9 @@ html {
 body {
   margin: 0;
 }
-a {
-  background: transparent;
-}
+/*a {*/
+  /*background: transparent;*/
+/*}*/
 /*a:focus {*/
   /*outline: thin dotted;*/
 /*}*/
