--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -1096,19 +1096,19 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
-a {
-  color: #337ab7;
-  text-decoration: none;
+/*a {*/
+  /*color: #337ab7;*/
+  /*text-decoration: none;*/
 
-}
-a:hover,
-a:focus {
-  color: #ffffff;
-  text-decoration: none;
-  background-color: #005983;
-  font-weight: bold;
+/*}*/
+/*a:hover,*/
+/*a:focus {*/
+  /*color: #ffffff;*/
+  /*text-decoration: none;*/
+  /*background-color: #005983;*/
+  /*font-weight: bold;*/
 
-}
+/*}*/
 a:focus {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
