--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -5,7 +5,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family: sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -3577,14 +3577,15 @@ tbody.collapse.in {
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  /*left: 0;*/
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 160px;
+  min-width: inherit;
   padding: 5px 0;
   margin: 2px 0 0;
   font-size: 14px;
+  font-weight: bold;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3592,7 +3593,7 @@ tbody.collapse.in {
           background-clip: padding-box;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, .15);
-  border-radius: 4px;
+  /*border-radius: 4px;*/
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
           box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
@@ -3608,18 +3609,19 @@ tbody.collapse.in {
 }
 .dropdown-menu > li > a {
   display: block;
-  padding: 3px 20px;
+  text-decoration: none;
+  padding: 3px 21px;
   clear: both;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 1.42857143;
-  color: #333;
+  color: #ffffff;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-  color: #262626;
+  color: #ffffff;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #269abc;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
@@ -6428,7 +6430,7 @@ button.close {
 .carousel-control .icon-next {
   width: 20px;
   height: 20px;
-  font-family: serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1;
 }
 .carousel-control .icon-prev:before {
@@ -6469,11 +6471,11 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  bottom: 20px;
+  bottom: 0px;
   left: 15%;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  /*padding-top: 20px;*/
+  padding-bottom: 0px;
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
@@ -6502,7 +6504,7 @@ button.close {
   .carousel-caption {
     right: 20%;
     left: 20%;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
   }
   .carousel-indicators {
     bottom: 20px;
