--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -37,7 +37,7 @@ template {
   display: none;
 }
 html {
-  font-family: sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -81,7 +81,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 1em;
 }
 pre {
@@ -265,7 +265,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -367,7 +367,7 @@ h6,
 .h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.1;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   color:#222;
   font-weight: bold;
 
@@ -647,7 +647,7 @@ blockquote.pull-right:before {
 }
 blockquote.pull-right:after {
   content: "\f10e";
-  font-family: FontAwesome;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 24px;
   float:right;
   color:#222;
@@ -671,7 +671,7 @@ blockquote.pull-right .small:after {
 }
 blockquote:before {
   content: "\f10d";
-  font-family: FontAwesome;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   font-size: 24px;
   float:left;
   color:#222;
@@ -687,7 +687,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 code {
   padding: 2px 4px;
@@ -1761,7 +1761,7 @@ output {
   -moz-box-sizing:border-box;
   padding: 8px 10px;
   font-size: 11px;
-  font-family: "Open Sans";
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   color:#222;
 }
 
@@ -3190,13 +3190,13 @@ input[type="button"].btn-block {
 .dropdown-menu > li > a {
   display: inline-block;
   clear: both;
-  font-size: 12px;
+  font-size: 14px;
   color: #aaa;
   text-transform: none;
   margin:0;
   padding:10px 0;
   white-space: nowrap;
-  font-family: "Open Sans";
+  font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   letter-spacing: 0;
 
@@ -3260,9 +3260,9 @@ input[type="button"].btn-block {
   position: relative;
 }
 .dropdown-submenu > .dropdown-menu {
-  top: 30px;
-  left: -35px;
-  background: #fff;
+  top: 25px;
+  /*left: -35px;*/
+  background: #005983;
   box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
   -webkit-box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
   -moz-box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
@@ -3272,16 +3272,16 @@ input[type="button"].btn-block {
     padding:10px 50px 0 33px;
     top: -17px;
     left: 0px;
-    font-family: FontAwesome;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#FFF;
     font-size: 20px;
-    content: '\f0de';
+    /*content: '\f0de';*/
 }
 .dropdown-submenu > .dropdown-menu >.dropdown-submenu > a:after {
    position: absolute;
    top:30%;
    right:10px;
-   font-family: FontAwesome;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    color:#aaa;
    font-size: 11px;
    content: '\f0d7';
@@ -3297,6 +3297,10 @@ input[type="button"].btn-block {
 .dropdown-submenu:hover > .dropdown-menu,
 .dropdown-submenu.hover_effect > .dropdown-menu {
   display: block;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display:block;
 }
 .open > .dropdown-menu {
   display: block;
@@ -3349,7 +3353,7 @@ input[type="button"].btn-block {
     margin:0;
     padding:10px 0;
     white-space: nowrap;
-    font-family: "Open Sans";
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 0;
 }
@@ -3423,7 +3427,7 @@ input[type="button"].btn-block {
     padding:10px 50px 0 33px;
     top: -17px;
     left: 0px;
-    font-family: FontAwesome;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#FFF;
     font-size: 20px;
     content: '\f0de';
@@ -3432,7 +3436,7 @@ input[type="button"].btn-block {
     position: absolute;
     top:30%;
     right:10px;
-    font-family: FontAwesome;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#aaa;
     font-size: 11px;
     content: '\f0d7';
@@ -3502,7 +3506,7 @@ input[type="button"].btn-block {
     margin:0;
     padding:10px 0;
     white-space: nowrap;
-    font-family: "Open Sans";
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 0;
 }
@@ -3576,7 +3580,7 @@ input[type="button"].btn-block {
     padding:10px 50px 0 33px;
     top: -17px;
     left: 0px;
-    font-family: FontAwesome;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#FFF;
     font-size: 20px;
     content: '\f0de';
@@ -3585,7 +3589,7 @@ input[type="button"].btn-block {
     position: absolute;
     top:30%;
     right:10px;
-    font-family: FontAwesome;
+    font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
     color:#aaa;
     font-size: 11px;
     content: '\f0d7';
@@ -4085,7 +4089,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-right: 30px;
   color: #ccc;
   font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   line-height: 20px;
   font-weight: 700;
   border-bottom: 3px solid #fff;
@@ -4918,7 +4922,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   line-height: 14px;
   font-size: 14px;
   color:#888;
-  font-family: "Montserrat";
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   text-decoration: none; 
 }
 
@@ -5641,7 +5645,7 @@ a.list-group-item.active:focus .list-group-item-text {
   margin: 0;
   padding: 13px 10px 0;
   font-weight: 400;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   color: #222;
   overflow: hidden;
 }
@@ -6250,7 +6254,7 @@ button.close {
   height: 20px;
   margin-top: -10px;
   margin-left: -10px;
-  font-family: serif;
+  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 .carousel-control .icon-prev:before {
   content: '\2039';
@@ -6291,10 +6295,10 @@ button.close {
   position: absolute;
   left: 15%;
   right: 15%;
-  bottom: 20px;
+  bottom: 0px;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  /*padding-top: 20px;*/
+  padding-bottom: 0px;
   color: #ffffff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
@@ -6316,7 +6320,7 @@ button.close {
   .carousel-caption {
     left: 20%;
     right: 20%;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
   }
   .carousel-indicators {
     bottom: 20px;
@@ -6857,7 +6861,7 @@ td.visible-print {
 }
 
 #divestado {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 14px;
     float: left;
     width: 160px;
@@ -6866,7 +6870,7 @@ td.visible-print {
     font-weight: bold;
 }
 #divestado2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
     text-align: center;
     font-weight: bold;
@@ -6874,14 +6878,14 @@ td.visible-print {
     height: 20px;
 }
 #divnombre {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 10px;
     float: left;
     width: 160px;
     height: 20px;
 }
 #divnombre2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 11px;
     text-align: center;
     font-weight: bold;
@@ -6891,7 +6895,7 @@ td.visible-print {
     color: #000000;
 }
 #divtwitter {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
     text-align: center;
     font-weight: bold;
@@ -6899,7 +6903,7 @@ td.visible-print {
     color: #52c7c7;
 }
 #divnombre3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 11px;
     text-align: center;
     font-weight: bold;
@@ -6908,7 +6912,7 @@ td.visible-print {
     height: 10px;
 }
 #divestado3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 12px;
     text-align: center;
     font-weight: bold;
@@ -6916,7 +6920,7 @@ td.visible-print {
     height: 10px;
 }
 #divtwitter3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 11px;
     text-align: center;
     font-weight: bold;
@@ -6934,7 +6938,7 @@ td.visible-print {
 #modaltexto {
     font-size: 14px;
     color: #333;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     text-align: center;
     vertical-align: bottom;
     margin-top: 20px;
