--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3187,6 +3187,8 @@ tbody.collapse.in {
   text-decoration: none;
   color: #262626;
   background-color: #f5f5f5;
+  width: inherit;
+  height: inherit;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
