--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -3577,11 +3577,11 @@ tbody.collapse.in {
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  /*left: 0;*/
+  left: 0;
   z-index: 1000;
   display: none;
   float: left;
-  min-width: inherit;
+  width: 200px;
   padding: 5px 0;
   margin: 2px 0 0;
   font-size: 14px;
@@ -3614,7 +3614,7 @@ tbody.collapse.in {
   clear: both;
   font-weight: bold;
   line-height: 1.42857143;
-  color: #ffffff;
+  color: #333333;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
@@ -3622,13 +3622,15 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   background-color: #269abc;
+  width: inherit;
+  height: inherit;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #269abc;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
