--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3215,8 +3215,8 @@ input[type="button"].btn-block {
 }
 .dropdown-menu > li{
   border-top: 1px dashed #eee;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 7px;
+  padding-left: 7px;
   background-color: rgba(0,0,0,0);
 
   transition: background 0.7s, color 0.7s;
@@ -3241,7 +3241,8 @@ input[type="button"].btn-block {
   text-decoration: none;
   outline: 0;
   background-color: #428bca;
-
+  width: inherit;
+  height: inherit;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3260,9 +3261,9 @@ input[type="button"].btn-block {
   position: relative;
 }
 .dropdown-submenu > .dropdown-menu {
-  top: 25px;
+  top: 34px;
   /*left: -35px;*/
-  background: #005983;
+  background: #a3c0bd;
   box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
   -webkit-box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
   -moz-box-shadow:0 0 8px 0 rgba(0,0,0,0.2);
