--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3175,7 +3175,7 @@ input[type="button"].btn-block {
   padding:8px 15px;
   min-width: 160px;
   list-style: none;
-  background-color: #ffffff;
+  /*background-color: #ffffff;*/
 }
 .dropdown-menu.pull-right {
   right: 0;
@@ -3185,13 +3185,13 @@ input[type="button"].btn-block {
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
-  background-color: #e5e5e5;
+  /*background-color: #e5e5e5;*/
 }
 .dropdown-menu > li > a {
   display: inline-block;
   clear: both;
   font-size: 14px;
-  color: #aaa;
+  /*color: #aaa;*/
   text-transform: none;
   margin:0;
   padding:10px 0;
@@ -3217,7 +3217,7 @@ input[type="button"].btn-block {
   border-top: 1px dashed #eee;
   padding-right: 7px;
   padding-left: 7px;
-  background-color: rgba(0,0,0,0);
+  /*background-color: rgba(0,0,0,0);*/
 
   transition: background 0.7s, color 0.7s;
   -webkit-transition: background 0.7s, color 0.7s;
@@ -3227,8 +3227,8 @@ input[type="button"].btn-block {
 }
 .dropdown-menu > li:hover,
 .dropdown-menu > li:focus{
-  color: #f1284e;
-  background-color: rgba(0,0,0,0.06);
+  /*color: #f1284e;*/
+  /*background-color: rgba(0,0,0,0.06);*/
   transition: background 0.3s, color 0.3s;
   -webkit-transition: background 0.3s, color 0.3s;
   -moz-transition: background 0.3s, color 0.3s;
@@ -3237,17 +3237,17 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  color: #ffffff;
+  /*color: #ffffff;*/
   text-decoration: none;
   outline: 0;
-  background-color: #428bca;
+  /*background-color: #428bca;*/
   width: inherit;
   height: inherit;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
-  color: #999999;
+  /*color: #999999;*/
 }
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
@@ -3274,7 +3274,7 @@ input[type="button"].btn-block {
     top: -17px;
     left: 0px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color:#FFF;
+    /*color:#FFF;*/
     font-size: 20px;
     /*content: '\f0de';*/
 }
@@ -4068,8 +4068,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #eeeeee;
-  border-color: #428bca;
+  /*background-color: #eeeeee;
+  border-color: #428bca;*/
 }
 .nav .nav-divider {
   height: 1px;
@@ -4311,8 +4311,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-collapse {
   max-height: 340px;
   overflow-x: visible;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 0px;
+  padding-left: 0px;
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch;
@@ -4660,8 +4660,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333333;
-  background-color: transparent;
+  /*color: #333333;
+  background-color: transparent;*/
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
@@ -4770,8 +4770,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ffffff;
-  background-color: transparent;
+  /*color: #ffffff;*/
+  /*background-color: transparent;*/
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
