--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,13 @@ body{
 
 /*Header*/
 header .container{
-    height: 300px;
+    height: 200px !important;
     text-align: center;
 }
 
 .logo_princ img{
     vertical-align: middle;
-    width: 343px;
+    width: 250px;
     height: auto;
 }
 
@@ -19,7 +19,8 @@ header .container{
     position: relative;
     margin: 0 auto;
     display: inline-block;
-    top:30px;
+    top:10px;
+
 }
 /* Fin Header*/
 
@@ -37,23 +38,43 @@ header .container{
 
 
 /* Menú principal (inicio) */
+
 .menu{
     top:20px;
 }
 
 .lista-menu {
-    color: #005983;
+    color: #ffffff;
     text-decoration: none;
     font-weight: bold;
     padding: 8px;
 
 }
 
-    .lista-menu:hover{
-        color: #ffffff;
-        background-color: #005983;
-        font-weight: bold;
-    }
+.lista-menu:hover{
+    color: #333333;
+    background-color: #a3c0bd;
+    font-weight: bold;
+}
+
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus{
+    color: #ffffff;
+    background-color: #005983;
+    font-weight: bold;
+}
+
+.menu_borde{
+    border-right: 2px solid #a3c0bd;
+}
+
+.dropdown-menu {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    background-color: #a3c0bd;
+}
 
 .dropdown-menu::after {
     position: absolute;
@@ -65,6 +86,16 @@ header .container{
     border-left: 6px solid transparent;
     content: '';
     color: #a3c0bd;
+}
+
+.dropdown-menu > li:hover{
+    background-color: #005983;
+}
+
+.navbar-nav{
+    background-color: #005983;
+    padding-left: 0px !important;
+    margin-left: 0px !important;
 }
 /* Fin Menú principal (inicio) */
 
@@ -108,6 +139,12 @@ header .container{
 .flechas a  {
     color: #cc006a;
 }
+
+/*.peopleCarouselImg img {
+  width: auto;
+  height: 350px;
+  max-height: 350px;
+}*/
 /* Fin Carrusel */
 
 
@@ -150,14 +187,15 @@ header .container{
     padding: 15px 15px;
     border-radius: 11px;
     text-indent: 20px;
+    /*color: #fff;*/
 }
 
 /*.parr_mision6{*/
-    /*text-align: justify;*/
-    /*background-color: #c3325f;*/
-    /*color: #ffffff;*/
-    /*padding: 15px 15px;*/
-    /*border-radius: 11px;*/
+/*text-align: justify;*/
+/*background-color: #c3325f;*/
+/*color: #ffffff;*/
+/*padding: 15px 15px;*/
+/*border-radius: 11px;*/
 /*}*/
 
 .sangria{
@@ -167,30 +205,30 @@ header .container{
     text-align: center;
 }
 /*.parr_mision3{*/
-    /*text-align: justify;*/
-    /*background-color: #005983;*/
-    /*color: #ffffff;*/
-    /*padding: 15px 15px;*/
-    /*border-radius: 11px;*/
-    /*text-indent: 20px;*/
+/*text-align: justify;*/
+/*background-color: #005983;*/
+/*color: #ffffff;*/
+/*padding: 15px 15px;*/
+/*border-radius: 11px;*/
+/*text-indent: 20px;*/
 
 /*}*/
 
 /*.parr_mision4{*/
-    /*text-align: justify;*/
-    /*background-color: #a3c0bd;*/
-    /*padding: 15px 15px;*/
-    /*border-radius: 11px;*/
-    /*text-indent: 20px;*/
+/*text-align: justify;*/
+/*background-color: #a3c0bd;*/
+/*padding: 15px 15px;*/
+/*border-radius: 11px;*/
+/*text-indent: 20px;*/
 /*}*/
 
 /*.parr_mision5{*/
-    /*text-align: justify;*/
-    /*background-color: #c3325f;*/
-    /*color: #ffffff;*/
-    /*padding: 15px 15px;*/
-    /*border-radius: 11px;*/
-    /*text-indent: 20px;*/
+/*text-align: justify;*/
+/*background-color: #c3325f;*/
+/*color: #ffffff;*/
+/*padding: 15px 15px;*/
+/*border-radius: 11px;*/
+/*text-indent: 20px;*/
 
 /*}*/
 
@@ -225,5 +263,257 @@ header .container{
     color: #005983;
     font-weight: bold;
 }
+
+/* Fin Contacto*/
+
+.bienvenida h3{
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight:bold;
+}
+
+/* Participante */
+.opciones_part{
+    border-right: 2px solid #a3c0bd;
+}
+
+.menu_part ul{
+    list-style: none;
+    text-align: center;
+    line-height: 30px;
+}
+
+/* Fin Participante */
+
+
+
+/*----------------------------------------------------------------------------------*/
+/*body{*/
+    /*height: 100%;*/
+/*}*/
+
+
+/*Header*/
+/*header .container{*/
+    /*height: 300px;*/
+    /*text-align: center;*/
+/*}*/
+
+/*.logo_princ img{*/
+    /*vertical-align: middle;*/
+    /*width: 343px;*/
+    /*height: auto;*/
+/*}*/
+
+/*.logo_princ{*/
+    /*position: relative;*/
+    /*margin: 0 auto;*/
+    /*display: inline-block;*/
+    /*top:30px;*/
+/*}*/
+/* Fin Header*/
+
+
+/*Contenedor principal*/
+/*.container{*/
+    /*background: #fff;*/
+    /*padding:0 30px;*/
+    /*box-shadow: 0 -5px 5px 0 rgba(0,0,0,0.4);*/
+    /*box-shadow: 0 0 1em rgba(68,105,213,0.4);*/
+    /*-webkit-box-shadow: 0 0 1em rgba(68,105,213,0.4);*/
+    /*-moz-box-shadow: 0 0 1em rgba(68,105,213,0.4);*/
+/*}*/
+/* Fin Contenedor principal*/
+
+
+/* Menú principal (inicio) */
+/*.menu{*/
+    /*top:20px;*/
+/*}*/
+
+/*.lista-menu {*/
+    /*color: #005983;*/
+    /*text-decoration: none;*/
+    /*font-weight: bold;*/
+    /*padding: 8px;*/
+
+/*}*/
+
+    /*.lista-menu:hover{*/
+        /*color: #ffffff;*/
+        /*background-color: #005983;*/
+        /*font-weight: bold;*/
+    /*}*/
+
+/*.dropdown-menu::after {*/
+    /*position: absolute;*/
+    /*top: -6px;*/
+    /*left: 10px;*/
+    /*display: inline-block;*/
+    /*border-right: 6px solid transparent;*/
+    /*border-bottom: 6px solid #a3c0bd;*/
+    /*border-left: 6px solid transparent;*/
+    /*content: '';*/
+    /*color: #a3c0bd;*/
+/*}*/
+/* Fin Menú principal (inicio) */
+
+
+/* Redes Sociales */
+/*.redes{*/
+    /*list-style: none;*/
+    /*top: 15px;*/
+/*}*/
+/* Fin Redes Sociales */
+
+
+/*Descripción Principal (inicio)*/
+/*.descripcion_princ{*/
+    /*background-color:lightslategrey;*/
+    /*text-align: center;*/
+    /*color: #ffffff;*/
+/*}*/
+/* Fin Descripción Principal (inicio)*/
+
+
+/*Descripción imágenes carrusel*/
+/*.descripcion{*/
+    /*background-color: #cc006a;*/
+    /*opacity: 0.7;*/
+    /*color: #ffffff;*/
+/*}*/
+/* Fin Descripción imágenes carrusel */
+
+
+/* Carrusel */
+/*.carousel-inner > .item > img,*/
+/*.carousel-inner > .item > a > img {*/
+    /*margin: auto;*/
+/*}*/
+
+/*.carousel-inner{*/
+    /*background-color: #97a0b3;*/
+/*}*/
+
+/*.flechas a  {*/
+    /*color: #cc006a;*/
+/*}*/
+/* Fin Carrusel */
+
+
+/* Pie de página (footer) */
+/*.pie-pag{*/
+    /*background-color: lightslategrey;*/
+    /*margin:0 -30px;*/
+    /*padding: 36px 30px 0 30px;*/
+/*}*/
+
+/*.lista_logos li{*/
+    /*list-style: none;*/
+/*}*/
+
+/*.texto{*/
+    /*text-align: justify;*/
+/*}*/
+
+/*.titulo_footer{*/
+    /*font-weight: bold;*/
+/*}*/
+
+/*.correo {*/
+    /*text-decoration: none;*/
+    /*color: inherit;*/
+/*}*/
+
+/*.correo:hover{*/
+    /*color: #ffffff;*/
+    /*text-decoration: solid;*/
+/*}*/
+/* Fin Pie de página (footer) */
+
+
+/* Misión y Visión */
+
+/*.parr_mision1{*/
+    /*text-align: justify;*/
+    /*background-color: #a3c0bd;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+    /*text-indent: 20px;*/
+/*}*/
+
+/*.parr_mision6{*/
+    /*text-align: justify;*/
+    /*background-color: #c3325f;*/
+    /*color: #ffffff;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+/*}*/
+
+/*.sangria{*/
+    /*padding-left: 6%;*/
+/*}*/
+/*.centro{*/
+    /*text-align: center;*/
+/*}*/
+/*.parr_mision3{*/
+    /*text-align: justify;*/
+    /*background-color: #005983;*/
+    /*color: #ffffff;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+    /*text-indent: 20px;*/
+
+/*}*/
+
+/*.parr_mision4{*/
+    /*text-align: justify;*/
+    /*background-color: #a3c0bd;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+    /*text-indent: 20px;*/
+/*}*/
+
+/*.parr_mision5{*/
+    /*text-align: justify;*/
+    /*background-color: #c3325f;*/
+    /*color: #ffffff;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+    /*text-indent: 20px;*/
+
+/*}*/
+
+/*.parr_mision2{*/
+    /*text-align: justify;*/
+    /*background-color: #005983;*/
+    /*color: #ffffff;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+    /*text-indent: 20px;*/
+
+/*}*/
+
+/* Fin Misión y Visión */
+
+
+/* Estructura */
+/*.parr_estruct1{*/
+    /*text-align: justify;*/
+    /*background-color: #a3c0bd;*/
+    /*padding: 15px 15px;*/
+    /*border-radius: 11px;*/
+/*}*/
+
+/* Fin Estructura */
+
+/* Contacto */
+/*.parr_contacto{*/
+    /*text-align: justify;*/
+/*}*/
+/*.tit_contacto{*/
+    /*color: #005983;*/
+    /*font-weight: bold;*/
+/*}*/
 
 /* Fin COntacto*/
