--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -3581,7 +3581,7 @@ tbody.collapse.in {
   z-index: 1000;
   display: none;
   float: left;
-  width: 220px;
+  /*width: 220px;*/
   padding: 5px 0;
   margin: 2px 0 0;
   font-size: 14px;
@@ -4222,7 +4222,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
@@ -4377,7 +4377,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: 0;
+    /*margin: 7.5px -15px;*/
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -4542,7 +4543,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-right {
     float: right !important;
-    margin-right: -15px;
+    /*margin-right: -15px;*/
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
@@ -6504,8 +6505,8 @@ button.close {
     margin-right: -15px;
   }
   .carousel-caption {
-    right: 20%;
-    left: 20%;
+    /*right: 20%;*/
+    /*left: 20%;*/
     padding-bottom: 0px;
   }
   .carousel-indicators {
