--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -1250,7 +1250,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 10px;
 }
 h4 small,
@@ -3614,7 +3614,7 @@ tbody.collapse.in {
   clear: both;
   font-weight: bold;
   line-height: 1.42857143;
-  color: #333333;
+  /*color: #333333;*/
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
@@ -4245,7 +4245,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
 .navbar-collapse.in {
-  overflow-y: auto;
+  /*overflow-y: auto;*/
 }
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -5059,7 +5059,7 @@ a.badge:focus {
   margin-bottom: 20px;
   line-height: 1.42857143;
   background-color: #fff;
-  border: 1px solid #ddd;
+  /*border: 1px solid #ddd;*/
   border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
        -o-transition: border .2s ease-in-out;
