--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -432,7 +432,7 @@ h4 .small {
 h4,
 h5,
 h6 {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   margin-bottom: 10px;
 }
 
@@ -4334,7 +4334,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 .navbar-collapse.in {
-  overflow-y: auto;
+  /*overflow-y: auto;*/
 }
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -5195,7 +5195,7 @@ a.list-group-item.active > .badge,
   margin-bottom: 20px;
   line-height: 1.428571429;
   background-color: #ffffff;
-  border: 1px solid #dddddd;
+  /*border: 1px solid #dddddd;*/
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
