--- a/public/css/bootstrap-3.3.5.css
+++ b/public/css/bootstrap-3.3.5.css
@@ -3621,7 +3621,7 @@ tbody.collapse.in {
 .dropdown-menu > li > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #005983;
+  background-color: #1968b3;
   width: inherit;
   height: inherit;
 }
