min-max validacion

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -296,7 +296,7 @@ header .container{
 
 /*Errores*/
 .errores {
-    background-color: #7D3865;
+    background-color: #E35A26;
     border-radius: 10px;
     border: solid 2px;
     color: white;
