arreglo menu principal dinamico - menu usuarios responsive y estilos -

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4309,7 +4309,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-collapse {
-  max-height: 340px;
+  /*max-height: 340px;*/
   overflow-x: visible;
   padding-right: 0px;
   padding-left: 0px;
